# AutoTestInterface

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/yunfeng/autotestinterface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android-log.h  auto_test_interface.cpp  auto_test_interface.h  error.c  my_listener.cpp  my_listener.h  native-lib.cpp  sample.cpp  sample.h
app/src/main/cpp/libevent/: bufferevent-internal.h  event-internal.h  util-internal.h
app/src/main/cpp/libevent/android/event2/: event-config.h
app/src/main/java/com/yunfeng/autotestinterface/: JNILib.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yunfeng/autotestinterface/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
